Completed GET and PUT functionality

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "reflux": "^0.3.0",
     "whatwg-fetch": "^0.10.1"
   }
 }
